<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:weightSum="1">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ph_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phrase_hint">
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/au_til"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author_hint">
    <AutoCompleteTextView
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_done"
            android:onClick="addItem"
            android:background="@color/colorTransparent"
            android:textColor="@color/colorAccent"
            android:textAllCaps="true"/>

    </LinearLayout>

</LinearLayout>